[gd_scene load_steps=89 format=2]

[ext_resource path="res://Assets/Sprites/Cutscene/Cutscene 1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/NiceFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Codes/TextEffects/CustomColorEffect.gd" type="Script" id=3]
[ext_resource path="res://Assets/Codes/Cutscene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scenes/Misc/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/SFX/Text VC.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/Groovy Nuts.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/MenuSelected.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/ReallySmallDamage.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/Scream.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sprites/MobileButtons/Normal/MobileButtonQ.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/MobileButtons/Pressed/MobileButtonQPressed.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Cutscene/Cutscene 2.png" type="Texture" id=16]
[ext_resource path="res://Assets/SFX/Woosh.mp3" type="AudioStream" id=17]
[ext_resource path="res://Assets/SFX/Teleport.mp3" type="AudioStream" id=18]
[ext_resource path="res://Assets/SFX/Move Reverbed.mp3" type="AudioStream" id=19]
[ext_resource path="res://Assets/SFX/Footsteps.mp3" type="AudioStream" id=20]
[ext_resource path="res://Assets/Music/Amen Break Up.mp3" type="AudioStream" id=21]
[ext_resource path="res://Assets/SFX/Click.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/Sprites/Cutscene/GaaCutscene 1.png" type="Texture" id=23]
[ext_resource path="res://Assets/Music/Bubbly Nuts.mp3" type="AudioStream" id=24]
[ext_resource path="res://Assets/Sprites/Cutscene/SackCutscene 1_5.png" type="Texture" id=25]
[ext_resource path="res://Assets/Music/Spider Nuts.mp3" type="AudioStream" id=26]

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 25 )
region = Rect2( 512, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 25 )
region = Rect2( 1024, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 25 )
region = Rect2( 1024, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 25 )
region = Rect2( 0, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 25 )
region = Rect2( 512, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 25 )
region = Rect2( 1024, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 23 )
region = Rect2( 0, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 23 )
region = Rect2( 512, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 1024, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 1536, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 0, 992, 512, 248 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 1024, 992, 512, 248 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 512, 992, 512, 248 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 1024, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 1536, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 23 )
region = Rect2( 1024, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 23 )
region = Rect2( 1536, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 23 )
region = Rect2( 512, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 25 )
region = Rect2( 1024, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 25 )
region = Rect2( 0, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 1024, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 1536, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 23 )
region = Rect2( 0, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 23 )
region = Rect2( 512, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 25 )
region = Rect2( 512, 0, 512, 248 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 1536, 992, 512, 248 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 0, 1240, 512, 248 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 0, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 512, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 25 )
region = Rect2( 0, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 25 )
region = Rect2( 512, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 0, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 512, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 23 )
region = Rect2( 1024, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 23 )
region = Rect2( 1536, 496, 512, 248 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 23 )
region = Rect2( 1024, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 23 )
region = Rect2( 1536, 248, 512, 248 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 0, 744, 512, 248 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 512, 744, 512, 248 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "Sack 3",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "Sack 5",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "Sack 6",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ), SubResource( 45 ), SubResource( 46 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "3.5",
"speed": 12.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "6.5",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "Sack 2",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "1.5",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "Sack 1",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "5.5",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "Sack 4",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "8.5",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "7.5",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "2.5",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="Animation" id=55]
resource_name = "Cutscene 2"
length = 10.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Scream:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.3, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CutscenePlayer/Woosh:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Punch:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../TextVC:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 4.4, 8, 8.7, 9.4, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CutscenePlayer/Move:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 7.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CutscenePlayer/Woosh2:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 5.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CutscenePlayer/Step:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CutscenePlayer/Amen:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2, 5.5, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CutscenePlayer/Amen:pitch_scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.6, 1.9, 5.5, 7.1, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.2, 3.0, 3.0, 0.2 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CutscenePlayer/Amen:off")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 5.5, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 15, 30 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../Scream:pitch_scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 6.3, 9, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5, 1.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("../Scream:volume_db")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 6.3, 7.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, -30.0 ]
}

[sub_resource type="Animation" id=56]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Scream:off")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CutscenePlayer/Amen:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CutscenePlayer/Amen:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CutscenePlayer/Amen:off")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Scream:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Scream:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Scream:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RichTextEffect" id=38]
script = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="Cutscene" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 256, 150 )
frames = SubResource( 7 )
animation = "Sack 6"
frame = 1
playing = true

[node name="Interacter" type="Button" parent="Sprite"]
margin_left = -48.0
margin_top = -22.0
margin_right = -8.0
margin_bottom = 18.0
focus_mode = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 37 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
action_mode = 0
enabled_focus_mode = 1

[node name="Escape" type="Button" parent="Sprite"]
margin_left = -20.0
margin_top = -342.0
margin_right = 20.0
margin_bottom = -302.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 37 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
action_mode = 0
enabled_focus_mode = 1

[node name="CutsceneSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 256, 150 )
texture = ExtResource( 16 )
hframes = 8
vframes = 13

[node name="CutscenePlayer" type="AnimationPlayer" parent="CutsceneSprite"]
playback_speed = 0.6
"anims/Cutscene 2" = SubResource( 55 )
anims/RESET = SubResource( 56 )

[node name="Woosh" type="AudioStreamPlayer" parent="CutsceneSprite/CutscenePlayer"]
stream = ExtResource( 17 )

[node name="Woosh2" type="AudioStreamPlayer" parent="CutsceneSprite/CutscenePlayer"]
stream = ExtResource( 18 )
pitch_scale = 0.8

[node name="Move" type="AudioStreamPlayer" parent="CutsceneSprite/CutscenePlayer"]
stream = ExtResource( 19 )

[node name="Step" type="AudioStreamPlayer" parent="CutsceneSprite/CutscenePlayer"]
stream = ExtResource( 20 )
volume_db = -10.0

[node name="Amen" type="AudioStreamPlayer" parent="CutsceneSprite/CutscenePlayer"]
stream = ExtResource( 21 )
volume_db = -15.0

[node name="Indicator" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 208.0
margin_top = 32.0
margin_right = 304.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Press \"Q\" to skip"
align = 1

[node name="Q" type="TouchScreenButton" parent="Indicator"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 32, 16 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
passby_press = true
action = "ui_skip"

[node name="Transition" parent="." instance=ExtResource( 5 )]
layer = 6

[node name="Name" type="Label" parent="Transition"]
margin_top = 8.0
margin_right = 512.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Text" type="RichTextLabel" parent="Transition"]
margin_left = 32.0
margin_top = 257.0
margin_right = 496.0
margin_bottom = 321.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false
custom_effects = [ SubResource( 38 ) ]

[node name="Tutorial" type="ColorRect" parent="Transition"]
visible = false
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="Transition/Tutorial"]
margin_top = 104.0
margin_right = 512.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "Are you new?"
align = 1

[node name="YesTutorial" type="Button" parent="Transition/Tutorial"]
margin_left = 64.0
margin_top = 160.0
margin_right = 192.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Settings")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.72549, 0.458824, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
action_mode = 0
text = "Yes"

[node name="NoTutorial" type="Button" parent="Transition/Tutorial"]
margin_left = 320.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Settings")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.72549, 0.458824, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
action_mode = 0
text = "No"

[node name="Timer" type="Timer" parent="."]

[node name="TextVC" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.5
bus = "SFX"

[node name="GroovyNuts" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "Music"

[node name="BubblyNuts" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -5.0
bus = "Music"

[node name="SpiderNuts" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -5.0
bus = "Music"

[node name="Punch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
bus = "SFX"

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -80.0
pitch_scale = 0.5
bus = "SFX"

[node name="Selecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "SFX"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
bus = "SFX"

[connection signal="pressed" from="Sprite/Interacter" to="." method="_on_Interacter_pressed"]
[connection signal="animation_finished" from="CutsceneSprite/CutscenePlayer" to="." method="_on_CutscenePlayer_animation_finished"]
[connection signal="animation_finished" from="Transition/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="focus_entered" from="Transition/Tutorial/YesTutorial" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="Transition/Tutorial/YesTutorial" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="Transition/Tutorial/YesTutorial" to="." method="_on_YesTutorial_pressed"]
[connection signal="focus_entered" from="Transition/Tutorial/NoTutorial" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="Transition/Tutorial/NoTutorial" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="Transition/Tutorial/NoTutorial" to="." method="_on_NoTutorial_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Transition"]
